--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.16.3",
     "lodash": "^4.17.11",
     "mongoose": "^6.7.2"
+  },
+  "devDependencies": {
+    "@vercel/node": "^2.6.3"
   }
 }
